objects/Veda_Other_Identity__c.object
<CustomObject>
    <fields>
        <fullName>Id_Index__c</fullName>
        <label>Id Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>Other_Identitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bureauReference__c</fullName>
        <label>bureauReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfBirthLastReportedDate__c</fullName>
        <label>dateOfBirthLastReportedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateOfBirth__c</fullName>
        <label>date Of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_Of_Birth_First_Reported_Date__c</fullName>
        <label>date Of Birth First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_LicenceFirst_Reported_Date__c</fullName>
        <label>drivers LicenceFirst Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Last_Reported_Date__c</fullName>
        <label>drivers Licence Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drivers_Licence_Number__c</fullName>
        <label>drivers Licence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender_Code__c</fullName>
        <label>gender Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individualName_Last_Credit_Enquiry_Date__c</fullName>
        <label>individualName Last Credit Enquiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Family_Name__c</fullName>
        <label>individual Name Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_First_Given_Name__c</fullName>
        <label>individual Name First Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_First_Reported_Date__c</fullName>
        <label>individual Name First Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Last_Reported_Date__c</fullName>
        <label>individual Name Last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>individual_Name_Other_Given_Name__c</fullName>
        <label>individual Name Other Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Deceased_Reported_Date__c</fullName>
        <label>is Deceased Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Deceased__c</fullName>
        <label>is Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodged_Complaint_Reported_Date__c</fullName>
        <label>lodged Complaint Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lodged_Complaint__c</fullName>
        <label>lodged Complaint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Other Identity</label>
    <nameField>
        <label>Other Identity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Other Identitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>